padded student id increment

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\still\\Desktop\\mysql-connector-java-5.1.44\\mysql-connector-java-5.1.44-bin.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=/Users/hthoma/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\still\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
